// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container Default matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F4F7F5",
        "flex": 1,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 47,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingLeft": 24,
            "paddingRight": 24,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingBottom": 34,
              "paddingTop": 0,
            }
          }
        >
          <Text
            style={
              {
                "color": "#13241C",
                "fontFamily": "Inter-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
            suppressHighlighting={true}
          >
            Default container
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Container Scrolling matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F4F7F5",
        "flex": 1,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingLeft": 24,
            "paddingRight": 24,
          }
        }
      >
        <RCTScrollView
          collapsable={false}
          contentContainerStyle={
            [
              {
                "flexGrow": 1,
              },
              {
                "paddingBottom": 0,
                "paddingTop": 0,
              },
            ]
          }
          contentInset={
            {
              "bottom": 34,
            }
          }
          contentInsetAdjustmentBehavior="never"
          handlerTag={-1}
          handlerType="NativeViewGestureHandler"
          keyboardDismissMode="on-drag"
          keyboardShouldPersistTaps="handled"
          onGestureHandlerEvent={[Function]}
          onGestureHandlerStateChange={[Function]}
          scrollIndicatorInsets={
            {
              "bottom": 34,
            }
          }
          showsVerticalScrollIndicator={false}
          style={
            {
              "flex": 1,
            }
          }
        >
          <View>
            <Text
              style={
                {
                  "color": "#13241C",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 12,
                  "lineHeight": 16,
                }
              }
              suppressHighlighting={true}
            >
              Scroll body
            </Text>
          </View>
        </RCTScrollView>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Container TokenOverrides matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#E6EEE9",
        "flex": 1,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 47,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingLeft": 16,
            "paddingRight": 16,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingBottom": 58,
              "paddingTop": 24,
            }
          }
        >
          <Text
            style={
              {
                "color": "#13241C",
                "fontFamily": "Inter-Medium",
                "fontSize": 12,
                "lineHeight": 16,
              }
            }
            suppressHighlighting={true}
          >
            Token gutter and fill
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Container WithFooter matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F4F7F5",
        "flex": 1,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 47,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingLeft": 24,
            "paddingRight": 24,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingBottom": 0,
              "paddingTop": 0,
            }
          }
        >
          <Text
            style={
              {
                "color": "#13241C",
                "fontFamily": "Inter-Medium",
                "fontSize": 12,
                "lineHeight": 16,
              }
            }
            suppressHighlighting={true}
          >
            Body
          </Text>
        </View>
        <View
          style={
            {
              "paddingBottom": 34,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignSelf": "stretch",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#1F7A4C",
                  "borderBottomLeftRadius": 8,
                  "borderBottomRightRadius": 8,
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingBottom": 16,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Inter-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
                suppressHighlighting={true}
              >
                Continue
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Container WithTopAndFooter matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F4F7F5",
        "flex": 1,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 47,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingLeft": 24,
            "paddingRight": 24,
          }
        }
      >
        <View>
          <Text
            style={
              {
                "color": "#13241C",
                "fontFamily": "Inter-Bold",
                "fontSize": 16,
                "lineHeight": 24,
              }
            }
            suppressHighlighting={true}
          >
            Sticky top
          </Text>
        </View>
        <View
          style={
            {
              "flex": 1,
              "paddingBottom": 24,
              "paddingTop": 0,
            }
          }
        >
          <Text
            style={
              {
                "color": "#13241C",
                "fontFamily": "Inter-Medium",
                "fontSize": 12,
                "lineHeight": 16,
              }
            }
            suppressHighlighting={true}
          >
            Middle grows
          </Text>
        </View>
        <View
          style={
            {
              "paddingBottom": 34,
            }
          }
        >
          <View
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "alignSelf": "stretch",
              }
            }
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "backgroundColor": "#1F7A4C",
                  "borderBottomLeftRadius": 8,
                  "borderBottomRightRadius": 8,
                  "borderTopLeftRadius": 8,
                  "borderTopRightRadius": 8,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "paddingBottom": 16,
                  "paddingLeft": 16,
                  "paddingRight": 16,
                  "paddingTop": 16,
                }
              }
            >
              <Text
                style={
                  {
                    "color": "#FFFFFF",
                    "fontFamily": "Inter-Bold",
                    "fontSize": 16,
                    "lineHeight": 24,
                  }
                }
                suppressHighlighting={true}
              >
                Continue
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;

exports[`Container WithoutSafeArea matches snapshot 1`] = `
<RNCSafeAreaProvider
  onInsetsChange={[Function]}
  style={
    [
      {
        "flex": 1,
      },
      {
        "flex": 1,
      },
    ]
  }
>
  <View
    style={
      {
        "backgroundColor": "#F4F7F5",
        "flex": 1,
        "paddingLeft": 0,
        "paddingRight": 0,
        "paddingTop": 0,
      }
    }
  >
    <View
      onLayout={[Function]}
      style={
        [
          {
            "flex": 1,
          },
          {
            "paddingBottom": 0,
          },
        ]
      }
    >
      <View
        style={
          {
            "flex": 1,
            "paddingLeft": 24,
            "paddingRight": 24,
          }
        }
      >
        <View
          style={
            {
              "flex": 1,
              "paddingBottom": 0,
              "paddingTop": 0,
            }
          }
        >
          <Text
            style={
              {
                "color": "#13241C",
                "fontFamily": "Inter-Medium",
                "fontSize": 12,
                "lineHeight": 16,
              }
            }
            suppressHighlighting={true}
          >
            Tab screen
          </Text>
        </View>
      </View>
    </View>
  </View>
</RNCSafeAreaProvider>
`;
